--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ wasmtime-wast = { workspace = true }
 wasmtime-wasi = { workspace = true, features = ["exit"] }
 wasmtime-wasi-crypto = { workspace = true, optional = true }
 wasmtime-wasi-nn = { workspace = true, optional = true }
+wasmtime-wasi-rdma = { workspace = true, optional = true }
 wasmtime-wasi-threads = { workspace = true, optional = true }
 clap = { workspace = true, features = ["color", "suggestions", "derive"] }
 anyhow = { workspace = true }
@@ -125,6 +126,7 @@ wasmtime-wast = { path = "crates/wast", version = "=7.0.0" }
 wasmtime-wasi = { path = "crates/wasi", version = "7.0.0" }
 wasmtime-wasi-crypto = { path = "crates/wasi-crypto", version = "7.0.0" }
 wasmtime-wasi-nn = { path = "crates/wasi-nn", version = "7.0.0" }
+wasmtime-wasi-rdma = { path = "crates/wasi-rdma", version = "7.0.0" }
 wasmtime-wasi-threads = { path = "crates/wasi-threads", version = "7.0.0" }
 wasmtime-component-util = { path = "crates/component-util", version = "=7.0.0" }
 wasmtime-component-macro = { path = "crates/component-macro", version = "=7.0.0" }
@@ -207,6 +209,7 @@ jitdump = ["wasmtime/jitdump"]
 vtune = ["wasmtime/vtune"]
 wasi-crypto = ["dep:wasmtime-wasi-crypto"]
 wasi-nn = ["dep:wasmtime-wasi-nn"]
+wasi-rdma = ["dep:wasmtime-wasi-rdma"]
 wasi-threads = ["dep:wasmtime-wasi-threads"]
 pooling-allocator = ["wasmtime/pooling-allocator", "wasmtime-cli-flags/pooling-allocator"]
 all-arch = ["wasmtime/all-arch"]
