--- a/crates/wasi-common/Cargo.toml
+++ b/crates/wasi-common/Cargo.toml
@@ -27,6 +27,9 @@ cap-std = { workspace = true }
 cap-rand = { workspace = true }
 bitflags = { workspace = true }
 log = { workspace = true }
+tokio = "1.25.0"
+async-rdma = "0.5.0"
+portpicker = "0.1.1"
 
 [target.'cfg(unix)'.dependencies]
 rustix = { workspace = true, features = ["fs"] }
@@ -49,7 +52,7 @@ default = ["trace_log"]
 # This feature enables the `tracing` logs in the calls to target the `log`
 # ecosystem of backends (e.g. `env_logger`. Disable this if you want to use
 # `tracing-subscriber`.
-trace_log = [ "wiggle/tracing_log", "tracing/log" ]
+trace_log = ["wiggle/tracing_log", "tracing/log"]
 # Need to make the wiggle_metadata feature available to consumers of this
 # crate if they want the snapshots to have metadata available.
 wiggle_metadata = ["wiggle/wiggle_metadata"]
