--- a/crates/wasi-common/Cargo.toml
+++ b/crates/wasi-common/Cargo.toml
@@ -30,6 +30,7 @@ log = { workspace = true }
 tokio = "1.25.0"
 async-rdma = "0.5.0"
 portpicker = "0.1.1"
+rdma-sys = "0.3.0"
 
 [target.'cfg(unix)'.dependencies]
 rustix = { workspace = true, features = ["fs"] }
