--- a/crates/wasi-nn/Cargo.toml
+++ b/crates/wasi-nn/Cargo.toml
@@ -19,6 +19,7 @@ wiggle = { workspace = true }
 # These dependencies are necessary for the wasi-nn implementation:
 openvino = { version = "0.4.2", features = ["runtime-linking"] }
 thiserror = { workspace = true }
+walkdir = "2.3"
 
 [build-dependencies]
 walkdir = "2.3"
